<resources>
    <string name="app_name">Car Buddy</string>
    <string name="string_splash_name">Car Buddy</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Sign in Sign Up
    <string name="string_email">Email</string>
    <string name="string_hint_email">example.josh@example.com</string>
    <string name="string_password">Password</string>
    <string name="string_forgot_password">Forgot Password?</string>
    <string name="string_sign_up">Sign Up</string>
    <string name="string_remember_me">Remember me</string>
    <string name="string_create_account">Create your\nAccount</string>
    <string name="string_or_continue_with">Or continue with</string>
    <string name="string_signIn">Sign In</string>
    <string name="string_or">OR</string>
    <string name="string_login_to_your_account">Login to your\nAccount</string>
    <string name="string_no_email_error">Please enter email</string>
    <string name="string_no_password_error">Please enter password</string>

    //Account setup
    <string name="string_fill_your_profile">Fill your Profile</string>
    <string name="string_full_name">Full Name</string>
    <string name="string_nick_name">Nick Name (Optional)</string>
    <string name="string_date_of_birth">Date of Birth</string>
    <string name="string_phone_number">Phone Number</string>
    <string name="string_address">Address</string>
    <string name="string_continue">Continue</string>
    <string name="string_menu_home">Home</string>
    <string name="string_menu_inbox">Inbox</string>
    <string name="string_menu_profile">Profile</string>
    <string name="string_menu_booking">Booking</string>

    <string name="string_service_account">/yH7knJzqM2FFFiu5lci0f+hteBt1LHKxZZXi16PXMafoseXyUmo4Zk2ZMBSWnf8NGPbel/QF78w
                                         uQwn2c4n5qauVff2bqH+fniUCv0c1C+cpCuAB34URXE+WVqKVKv0Yc6G0T7NybtRYguOKcHf0rb4
                                         F28/lB+L1+prz3EXhWrnRKtj5b1KpJ4x6tG2f5VozC+bhBd7/QSp0vnqaig3XG1W0TLy0VN8W8hJ
                                         OISCo1HkFJhLsiscf25zEXQhBgBbUD02lv6RYU4gtuPUTbaoI4n9rrBSL+1/Kpiu0HHhMEVvnka4
                                         OudMit3huRCAA1lBbB/r7cjQgpb+A660byUn0cnwopW3f0dRXjvLjhUDBPnpfyREgMZbSxb+Eg6x
                                         CV2l28T43ampg7a/XUQffINjtF2mwLLnH5nPefhtb20Tsyt8jD1mW5l4qjaT0ZJhg67TDeNJWhrv
                                         9qwK1zgqRnBdfpWW9Ask6dELpOCD5xxW5ZcslOve3cWxJT8/wMYZiMIdtcx7pTtsh4ZK/uLFsnYM
                                         qX6S14EOlELiTueca7x09DVADRnzIcLovW7IGCSoWhyTZ9H4f4gq247os3qvq4C0J1uJKfMuTReh
                                         wUL9VRLLmLlni3iRDEjFGk9V3WylPNwQ4YX0aV0fRzqiyiEUYUmiEUUsyuPtRjsNOWZzvCWBLf9s
                                         UiakkanSS7zWG010AE32yAQuPQ2Qb1jkiPpKOebYz3WhMgU+NAzXitdw3mUSu0AwMy9S9HPxewBb
                                         LTc2maxaJ6bZCryhi08SQHl5XdBsX2TkrrePrg/t2se+DDACI2OekVEFchOqyLYWE3aqUq8Zfx4H
                                         4zlqElt5aJUX5p12WpU7IDbHY5YeMonU/WcBLAT5hAbmvfT/eISHCLAvfEojGv0emHoyEdKoV+Zr
                                         swglK/TeGY6Sf9ykGEG/ZUssFMINa20D5bJZIYj5FnWf2q1h84qVyDCY6ESA+/padpVdhiQxjnPj
                                         PjoZeS22FXRF64KGjOeKumWddP3OYbAoIlSAVSfUoP1spzQSvsDbiZH4PsfZWhvavys8SwTa/St+
                                         cagmWW9SYbyl5RsBOT7MrSZ60AffqwMQy10TYMM7rTOZdM2X1AHaoqT/mGxbXM0lKrUXLZ+CZZjT
                                         fzdUR4RoJUTVdt4TYtvBAWBN2BO85uXcSx4dA9tsITi/A4OTDguIA6u0HmBwFhnU82+qhTiosIY9
                                         SUN0bwTEmXV07jedzj0GECW0gatidSRV75pJpXovXoxJXqO2k7R5NGlzAbt9utJ9dgULP3WTDO9u
                                         /gQnvD9NvEn5968FC8Ez0tRbpjnWPRkSCnjaIjzNc4hXKacVnFEF5GZcAfe0hC/YlOFzA0peivKZ
                                         bFw1eJBfUG1vRhm/aX/cO1QbbgTJGzEqnhsqXwcmHUMRtLgmUN7LhUGEh+CPExkz/tHIDdPLAmtR
                                         9GXFGp0K+QY149sjw/+BSTp8RRk1A6G93QuoJ0REi282EsYX+1ZEx12L0VftMxVnFeToqZm6UaaD
                                         kt0JGJw4bLrxIdeMUKwmSzha9WdRw4Hh8lk/oc+OnTUlwcV0MJvTN9HkNacA0J6cU4HLlaLmhYY7
                                         8+fBWrPw6MpWtZZZ515RSwDteYZXobTkrXdzEfqjD4jGck/kGdw2qM5L3PQn9v2NiaUrbZD+3EpQ
                                         GFHDAoRDai6qC7a6xnx/6pP98G3bV56+56/HdFIpQX0nrTdm1Au/BkuL3z+YUPzuINslbdbnDKnB
                                         Pfr8+7SURGL7Y167bwLE4EhXLpxABq5ozX7mgAarLI4KeSFuBNbBtiaHMrzY8UaH3BrnqojnmRfn
                                         GatT68fy9LewidiGNHGNUGBg/O1np/5QygvD2Qxzmicmh3TinnQQFeJYqTd/cfdzpoO9oT4dnWa+
                                         VKzJmcbfu3DosWVgpWc5Pv9q3WojHXZaZT4cQBX6m6ZaD6kt/8BxRsNluPC1VvYbFfBEgVZapZYe
                                         5nJ8msu4pfAeroWTlQk90QFNEqkNtL1ByAsSiW5uTMYkSo0R4r9UGeGCSVHEN1EosLToUSsaUMsa
                                         aH+kpcqZnjHYdrRgcXFrrHyiemtS7+W6EbyXg2HY5iah+45Jktcl6Gh+SHCteuL2Ad+MpuoJSwsT
                                         hbtt4Ql2201IcLGKI4nN9pRovIZ8iYJPssypnBFujb5ct74xlpPv+UyPduWZv/g4jl6jCvfOBK7Q
                                         mYddraKtrSCZ4ZXZcEDnOIhpXJN7CwLhb3I1nUmfzQ3kLfgyEkrFGi8hbFAuVqg7Elqj1Hmf1OEH
                                         Pn/H+pgIv3LXU9IanZb60gvva8yYiT6WW0QZK5MunRMJvmdIfnwJUsMJhSsBTAMQgwMxto+n99bH
                                         qiYQI2zLJ5pc4HBUqnWjRbpZZGSQbbgGi6F3N1CcU00c5MDI5DRh8unfn75QXy/k/REB7kp7xkKX
                                         MYoymIcypT7mm3n4egZwB+FD82qRY9UPtnhCr8BGgyr9TJdnfWWZ5kSi+hA6BpRd1aHC8jvG3Aqm
                                         zwt2Sx1bpXLliwVSjM3k+1o4ewKfPBRFGFE97PLjb3Wu8ZCH/XZQxgadS+8fcynwZGSS8CIYayYK
                                         /1uvXXVLjd7w8zwwDEjRkEKlY8qcWeraOUaLXcvl88Hkw1ktEeQ88freRO6mHepAXMGmIVNsFtV3
                                         EddtOB9321OiUZHtZ99/qiI1RP9sT5MK478JL3tIRaaumZcMRv1bc7utdxBwiBZBWXOLJ8op76yt
                                         w4sVIkIql8d73NRGOGA45JG//YXABafJbqJ6zQo2TeKXVUCTUVBaCdgwC8vkl8Hlu6UfWzj4rBJk
                                         w4W3mviFxYVUx/+YTzdir6msC6nHZRNP2QFlCBSCrYTn2VOESTC3pld3BKk89RMr6GEOKN2wchCd
                                         OUTGHSmsstV9tb3M9MRlv5bwKlFaEMwaPud0QTe/NseSOvmkof+jH4Ftbg5HPtyH5c6b/qQDRD1q
                                         +gX8+bb5TzqCrtfeyorw9UqTnqNyvXe+/Lh+SE6dyGpCViPHTKSCTdy/1bzpomlRAzJ7ILaYkvdO
                                         tfr7CWFH/RuCveCuY6QlPMLIxo/jcvjZ7C7m9RwjWivcaq/4DK2wlUvzldfJuLHPiFZ6WlwSdJzt
                                         FFqBTyR7DYX4nky2lKCUUMWo4rWtewUXeXOnQzK7duEgO9z4PJdIkKFBZ6jzi0ZKK/LKwNhN3tUj
                                         AbKuh29kTEj0fVdlJhEth55JS9W0XHnJnOXhHY9QI8mk6+2WdEI=</string>


    <string name="default_web_client_id" />
    <string name="google_map_api_key">AIzaSyDmwh69uHo142cSDoI77NNvndzrYFYNSEc</string>

</resources>