<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_background"
        tools:context=".ui.fragments.auth_fragments.signup.SignUpFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/LayoutBgAndPaddings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView4"
                    style="@style/textViewStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/string_create_account"
                    android:textSize="@dimen/_25ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backArrow" />

                <TextView
                    android:id="@+id/tvEmail"
                    style="@style/textViewStyleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/string_email"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    style="@style/edittextStyle"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/string_hint_email"
                    android:inputType="text"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmail"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tvSignInPassword"
                    style="@style/textViewStyleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/string_password"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etEmail" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etPassword"
                    style="@style/edittextStyle"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawableEnd="@drawable/icon_password_visibility_on"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSignInPassword"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkBoxRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/string_remember_me"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etPassword" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignup"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/string_sign_up"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxRememberMe" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvForgotPassword"
                    style="@style/textViewStyleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/string_forgot_password"
                    android:textColor="@color/color_primary"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/checkBoxRememberMe"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/checkBoxRememberMe" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textSignup"
                    style="@style/textViewStyleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/btnSignup"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignup" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>