<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.auth_fragments.auth_info.FillProfileFragment">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/LayoutBgAndPaddings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvFillProfile"
                    style="@style/textViewStyleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:text="@string/string_fill_your_profile"
                    android:textSize="19sp"
                    app:layout_constraintBottom_toBottomOf="@+id/backArrow"
                    app:layout_constraintStart_toEndOf="@+id/backArrow"
                    app:layout_constraintTop_toTopOf="parent" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/profilePic"
                    android:layout_width="@dimen/_100sdp"
                    android:layout_height="@dimen/_100sdp"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:src="@drawable/logo_profile_pic_placeholder"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backArrow" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/btnImagePicker"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/icon_profile_image_picker"
                    app:layout_constraintBottom_toBottomOf="@+id/profilePic"
                    app:layout_constraintEnd_toEndOf="@+id/profilePic" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etFullName"
                    style="@style/edittextStyle"
                    android:layout_marginTop="@dimen/_35sdp"
                    android:hint="@string/string_full_name"
                    android:inputType="text"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/profilePic"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etEmail"
                    style="@style/edittextStyle"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableEnd="@drawable/icon_mail"
                    android:hint="@string/string_email"
                    android:inputType="textEmailAddress"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etFullName"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etDateOfBirth"
                    style="@style/edittextStyle"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableEnd="@drawable/icon_calendar"
                    android:hint="@string/string_date_of_birth"
                    android:inputType="none"
                    android:singleLine="true"
                    android:cursorVisible="false"
                    android:focusableInTouchMode="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etEmail"
                    tools:ignore="SpeakableTextPresentCheck" />

                <com.hbb20.CountryCodePicker
                    android:id="@+id/countryCodePicker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccpDialog_fastScroller_bubbleColor="@color/color_edittext_background"
                    app:ccpDialog_textColor="@color/color_textview"
                    app:ccp_arrowColor="@color/color_textview"
                    app:ccp_contentColor="@color/color_textview"
                    app:ccp_hintExampleNumber="true"
                    app:ccp_showNameCode="false"
                    app:ccp_showPhoneCode="true"
                    app:ccp_autoDetectLanguage="true"
                    app:ccp_autoDetectCountry="true"
                    app:layout_constraintBottom_toBottomOf="@+id/phoneNumber"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/phoneNumber" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/phoneNumber"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:background="@drawable/bg_edittext"
                    android:fontFamily="@font/open_sans_regular"
                    android:hint="@string/string_phone_number"
                    android:inputType="phone"
                    android:paddingHorizontal="15dp"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/countryCodePicker"
                    app:layout_constraintTop_toBottomOf="@+id/etDateOfBirth"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/etAddress"
                    style="@style/edittextStyle"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:drawableEnd="@drawable/icon_location"
                    android:hint="@string/string_address"
                    android:inputType="text"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/phoneNumber"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnContinue"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/string_continue"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/etAddress"
                    />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>