<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragments.auth_fragments.login.LogInFragment">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                style="@style/LayoutBgAndPaddings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/backArrow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_back"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView4"
                    style="@style/textViewStyleBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/string_login_to_your_account"
                    android:textSize="@dimen/_20ssp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/backArrow" />

                <TextView
                    android:id="@+id/tvEmail"
                    style="@style/textViewStyleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/string_email"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appCompatTextView4" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/signInEmailEditText"
                    style="@style/edittextStyle"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:hint="@string/string_hint_email"
                    android:inputType="text"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvEmail"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tvSignInPassword"
                    style="@style/textViewStyleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/string_password"
                    android:textSize="15sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signInEmailEditText" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/signInPasswordEditText"
                    style="@style/edittextStyle"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:drawableEnd="@drawable/icon_password_visibility_on"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/tvSignInPassword"
                    tools:ignore="SpeakableTextPresentCheck" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkBoxRememberMe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:text="@string/string_remember_me"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/signInPasswordEditText" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btnSignIn"
                    style="@style/ButtonStyle"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:text="@string/string_signIn"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/checkBoxRememberMe" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvForgotPassword"
                    style="@style/textViewStyleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textSize="16sp"
                    android:text="@string/string_forgot_password"
                    android:textColor="@color/color_primary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnSignIn" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:layout_marginEnd="20dp"
                    android:background="#CFD2D6"
                    app:layout_constraintEnd_toStartOf="@+id/appCompatTextView"
                    app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/appCompatTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/open_sans_regular"
                    android:text="@string/string_or_continue_with"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="@+id/view2"
                    app:layout_constraintEnd_toEndOf="@+id/tvForgotPassword"
                    app:layout_constraintStart_toStartOf="@+id/tvForgotPassword"
                    app:layout_constraintTop_toTopOf="@+id/view" />

                <View
                    android:id="@+id/view"
                    android:layout_width="@dimen/_70sdp"
                    android:layout_height="2dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:background="#CFD2D6"
                    app:layout_constraintStart_toEndOf="@+id/appCompatTextView"
                    app:layout_constraintTop_toBottomOf="@+id/tvForgotPassword" />

                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/btnGoogleLogIn"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sdp"
                    android:layout_marginHorizontal="4dp"
                    android:layout_marginTop="30dp"
                    app:cardBackgroundColor="@color/color_edittext_background"
                    app:cardCornerRadius="20dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/view2">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <androidx.appcompat.widget.AppCompatImageView
                            android:id="@+id/appCompatImageView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="20dp"
                            android:src="@drawable/icon_google"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                        <androidx.appcompat.widget.AppCompatTextView
                            style="@style/textViewStyleMedium"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Google"
                            android:textSize="16sp"
                            app:layout_constraintBottom_toBottomOf="@+id/appCompatImageView"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="@+id/appCompatImageView" />
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </com.google.android.material.card.MaterialCardView>
                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textSignIn"
                    style="@style/textViewStyleRegular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:textSize="15sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/btnGoogleLogIn" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>